--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -4,6 +4,7 @@ include /components/banner.pug
 include /components/column.pug
 include /components/navbar.pug
 include /components/footer.pug
+include /components/img-view.pug
 include /components/image.pug
 include /components/layer.pug
 include /components/text.pug
