--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -22,7 +22,7 @@ block content
       class: "layout-shorten layout-contain"
     })
       +main
-        section.layout-padding-top.layout-padding-bottom-large.layout-clearfix
+        section.layout-padding-top--device-gt-phone.layout-padding-bottom-large.layout-clearfix
           h3.h5.style-font-30--device-phone.style-primary-dark.style-bold Hi, I’m Joseph.
           +p("For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious alliance to solve societal pain points. <br><br> I am always on my feet looking for the next opportunity. Through continuous improvement, determination, and a foresight of opportunity, I seek to achieve my goals. Afterall, the game isn’t changed until the game is played. ")
 
@@ -75,7 +75,7 @@ block content
           class: "layout-shorten-vert"
       })
         div.layout-padding-vert-bottom.layout-contain.layout-shorten-horz.layout-contain
-          h3.style-font-30.style-bold Recent Activities 
+          h3.style-font-30.style-bold Recent Activities
           div
             +p("Here are some of the projects I have worked on. These include some ongoing and finished research projects, personal projects, as well as some old school and work projects I think you should know about.  ")
         //- 1st Row
@@ -212,9 +212,8 @@ block content
                 +p({
                   class: "text-above-quote"
                 })
-                  span.layout-margin-horz-right-dull 
+                  span.layout-margin-horz-right-dull
                     | If you are still reading this, you might just be the chosen one.  Working with me is like eating a quadruple-layer steak-filled poutine lasagna – you are not sure what you’re getting yourself into, but you’re going to have the time of your life, provided you like lasagna of course.
                     br
                     br
                     | I’ve been told that the zeal I have with my projects is strong and unwavering. Therefore, if you are looking for persistence, I’m your guy. I am also very goal focused. I like to plan and accomplish, and I hope you are too. So, let us get this motorized ball rolling – so to speak!
-  
