--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -255,7 +255,7 @@ video {
     min-height: 200px;
     display: block;
     border: none;
-    width: 100%;
+    // width: 100%;
 
     @media #{$screen-size-lt-tablet} {
         height: inherit;
@@ -356,27 +356,56 @@ a.skip-main {
     }
 }
 
-figure.load-img {
-    height: 500px;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-    transform: translate3d(0, 0, 0);
-    height: 100%;
-
-    img {
-        position: absolute;
-        object-fit: cover;
-        object-position: center center;
-        left: 0;
-        bottom: 0;
-
-        height: 100%;
+.layer-image {
+    figure.load-img {
+        height: 500px;
         width: 100%;
-    }
+        overflow: hidden;
+        position: relative;
+        transform: translate3d(0, 0, 0);
+        // height: 100%;
 
-    &.bottom img {
-        object-position: center bottom;
+        img {
+            position: absolute;
+            object-fit: cover;
+            object-position: center center;
+            left: 0;
+            bottom: 0;
+
+            height: 100%;
+            width: 100%;
+        }
+
+        &.bottom img {
+            object-position: center bottom;
+        }
+    }
+}
+
+.img-view {
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+
+    figure.load-img {
+        transition: background-color #{$transitionDuration} ease;
+        position: relative;
+        transform: translate3d(0, 0, 0);
+        display: inline-block;
+        background-color: #797886;
+
+        img {
+            position: relative;
+            object-fit: contain;
+            object-position: center center;
+            transform: scale(1);
+        }
+    }
+}
+
+html[theme="dark"] {
+    .img-view figure.load-img {
+        background-color: #1d1c2b;
     }
 }
 
