refactor: :art: fix grammar issues

--- a/src/pug/components/banner.pug
+++ b/src/pug/components/banner.pug
@@ -9,7 +9,7 @@ mixin banner(value = {})
       .layer-hero
         +image(image)
 
-        .layout-padding-horz-default--device-lt-tablet.layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
+        .layout-padding-horz-default--device-lt-tablet.layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center
           .layer-content.layout-contain
             .layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder(itemprop="headline")!= title
