--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -51,7 +51,7 @@ block content
                   +link({
                       class: "layout-margin-bottom-small style-center action-btn action-btn-expand-scale action-btn-smooth layer-secondary-btn",
                       href: "https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAafqFGVUOFpCU0tIMk8xRTZCTzFFS09ITlEwTlFFRS4u"
-                  }, true)(title="View my CV." target="_blank"  rel="noopener")
+                  }, true)(title="Open the Contact Form." target="_blank"  rel="noopener")
                     span.layout-padding-nano
                     section.action-btn-layout
                       span.action-btn-group.layout-padding-smaller
@@ -119,7 +119,7 @@ block content
         +main({
           class: "layout-padding-vert-small layout-clearfix style-center"
         })
-          //- span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left H
+          //- span.style-letter-head H
           //- +p("ey, I am ")
           //-   span(itemprop='author') Joseph Ojo
           //-   span , the man, the myth, the legend, let's talk.
