--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,9 +2,9 @@ extends /layout.pug
 
 block hero
   //- Hero layer
-  //- content: "Bringing Hardware and Software to life.",
   +hero({
     title: "Bridging the Gap",
+    content: "Bringing Hardware and Software to life.",
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/suspension-bridge",
@@ -24,7 +24,7 @@ block content
       +main
         section.layout-padding-top--device-gt-phone.layout-padding-bottom-large.layout-clearfix
           h3.h5.style-font-30--device-phone.style-primary-dark.style-bold Hi, I’m Joseph.
-          +p("For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious alliance to solve societal pain points. <br><br> I am always on my feet looking for the next opportunity. Through continuous improvement, determination, and a foresight of opportunity, I seek to achieve my goals. Afterall, the game isn’t changed until the game is played. ")
+          +p("For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious alliance to solve societal pain points. <br><br> I am always on my feet looking for the next opportunity. Through continuous improvement, determination, and a foresight of opportunity, I seek to achieve my goals. The game isn’t changed until the game is played. ")
 
   div.layout-margin-horz-small
     //- Skills Column layer
@@ -213,7 +213,7 @@ block content
                   class: "text-above-quote"
                 })
                   span.layout-margin-horz-right-dull
-                    | If you are still reading this, you might just be the chosen one.  Working with me is like eating a quadruple-layer steak-filled poutine lasagna – you are not sure what you’re getting yourself into, but you’re going to have the time of your life, provided you like lasagna of course.
+                    | If you are still reading this, you might just want to work with me. Working with me is like eating a quadruple-layer steak-filled poutine lasagna – you are not sure what you’re getting yourself into, but you’re going to have the time of your life, provided you like lasagna of course.
                     br
                     br
                     | I’ve been told that the zeal I have with my projects is strong and unwavering. Therefore, if you are looking for persistence, I’m your guy. I am also very goal focused. I like to plan and accomplish, and I hope you are too. So, let us get this motorized ball rolling – so to speak!
