--- a/src/pug/pages/projects/battery-manager.pug
+++ b/src/pug/pages/projects/battery-manager.pug
@@ -7,14 +7,14 @@ block pageInfo
       url: "/projects/battery-manager",
       name: "battery-manager",
       title: "Battery Manager — A tool designed to provide flexibility in a variety of research projects into batteries.",
-      description: "A tool designed to provide flexibility in the variety of research that I, and future research colleagues will undertake into the field of batteries."
+      description: "A tool designed to provide flexibility in the variety of research that I and future research colleagues will undertake into the field of batteries."
     };
 
 block content
   //- Banner layer
   +banner({
     title: "Project 2: Battery Manager (2018 – Present)",
-    content: "A tool designed to provide flexibility in the variety of research that I, and future research colleagues will undertake into the field of battery technology.",
+    content: "A tool designed to provide flexibility in the variety of research that I and future research colleagues will undertake into the field of battery technology.",
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
@@ -33,11 +33,11 @@ block content
         class: "layout-padding-vert-small layout-clearfix"
       })
         +p
-          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left I
-          span.layout-inline.layout-margin-dull started developing the battery manager at the beginning of my master’s research, and over the span of my two-year research, added a multitude of new capabilities.
+          span.style-letter-head I
+          span.layout-inline.layout-margin-dull  started developing the battery manager at the beginning of my master’s research, and over the span of my two-year research, added a multitude of new capabilities.
             br
             br
-            | The purpose of the battery manager has been to provide complete flexibility in the variety of research that I have, and future researcher colleagues will undertake. Compared to commercially available alternatives, this custom-built battery manager permits the ability to swap sensors, test a variety of battery packs, add auxiliary devices, develop complex algorithms and remotely monitor tests, all the while achieving a 5-10 times cost reduction. The manager started small. With a basic bench power supply and electronic load, it could only perform tests on one or two cells at a time, and since my thesis was to contribute to the battery field with a health-conscious fast-charging algorithm for a battery pack, an upgrade was crucial.
+            | The purpose of the battery manager has been to provide complete flexibility in the variety of research that I and future researcher colleagues will undertake. Compared to commercially available alternatives, this custom-built battery manager permits the ability to swap sensors, test a variety of battery packs, add auxiliary devices, develop complex algorithms and remotely monitor tests, all the while achieving a 5-10 times cost reduction. The manager started small. With a basic bench power supply and electronic load, it could only perform tests on one or two cells at a time, and since my thesis was to contribute to the battery field with a health-conscious fast-charging algorithm for a battery pack, an upgrade was crucial.
             br
             br
             | Before upgrading the system, however, we successfully completed several research projects.
@@ -87,7 +87,7 @@ block content
 
   //- Next page layer
   +layer({
-    class: "layout-padding-horz-default--device-gt-tablet"
+    class: "layout-padding-horz-small layout-padding-horz-default--device-gt-tablet"
   })
     +layout({
       class: "layout-contain-large"
