--- a/src/pug/pages/projects/publications.pug
+++ b/src/pug/pages/projects/publications.pug
@@ -40,7 +40,7 @@ block content
 
   //- Next page layer
   +layout({
-    class: "layout-contain-large layer-round layout-padding-horz--device-gt-tablet"
+    class: "layout-contain-large layer-round layout-padding-horz-small layout-padding-horz--device-gt-tablet"
   })
     +link({
       href: "/projects/boxer",
