--- a/src/pug/pages/projects/ultima-apparel.pug
+++ b/src/pug/pages/projects/ultima-apparel.pug
@@ -33,7 +33,7 @@ block content
         class: "layout-padding-vert-small layout-clearfix"
       })
         +p
-          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left U
+          span.style-letter-head U
           span.layout-inline.layout-margin-dull ltima Apparel started off as a pet project for my co-founder. He was looking to find a way to improve his posture and acquire data about his form after hurting himself during a workout. He approached me to see if we could solve that problem for others as well.
           br
           br
@@ -41,7 +41,7 @@ block content
 
   //- Next page layer
   +layout({
-    class: "layout-contain-large layer-round layout-padding-horz--device-gt-tablet"
+    class: "layout-contain-large layer-round layout-padding-horz-small layout-padding-horz--device-gt-tablet"
   })
     +link({
       href: "/projects/phoenix",
