--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -33,7 +33,7 @@ block content
 
         section(itemscope itemtype="https://schema.org/SiteNavigationElement")
           span.style-letter-head A
-          +p("s the eldest of 4 children, I have picked up on several skills and philosophies including a natural inclination for leadership, a keen sense of responsibility, a strong ability to maintain peaceful interactions, and the continuous need to improve myself and surroundings. Unsurprisingly, a recent professional development assessment (developed by Plum.io) places adaptation, teamwork, conflict resolution and innovation as some of my top talents. This, and many other projects I have led or collaborated on are also evidences of the skilled I have accrued thus far.")
+          +p("s the eldest of 4 children, I have picked up on several skills and philosophies including a natural inclination for leadership, a keen sense of responsibility, a strong ability to maintain peaceful interactions, and the continuous need to improve myself and surroundings. Interestingly, a recent professional development assessment (developed by Plum.io) places adaptation, teamwork, conflict resolution and innovation as some of my top talents. This, and many other projects I have led or collaborated on are also evidences of the skilled I have accrued thus far.")
           br
           br
           +p("I have been quite fortunate in my educational career, graduating with a High Distinction from Ontario Tech University in a Mechanical (specifically Mechatronics) Engineering program. I am currently working towards my master’s degree under the supervision of two of the best at Ontario Tech University, Drs. ")
@@ -47,16 +47,16 @@ block content
             content: "Haoxiang Lang"
           })(target="_blank" rel="noopener" title="Link to an about page for Dr. Haoxiang Lang.")
           span=". "
-          +p("My thesis is set to combine the use of neural networks and predictive control algorithms to ensure that robotic and automotive battery systems are safe, and last long while being fast charged. This is a very exciting and fulfilling research project due to its necessity for future economic growth and sustainability.")
+          +p("My thesis is set to combine the use of neural networks and predictive control algorithms to ensure that robotic and automotive battery systems are safe, and last long while charged quickly. This is a very exciting and fulfilling research project due to its necessity for future economic growth and sustainability.")
           br
           br
-          +p("I am enthusiastic about all things Mechatronics. The sheer brilliance of how mechanical, electronics and software components cohesively mesh together in a harmonious synergy is absolutely fascinating to me. This fascination from a very young age has always meant that I was unwavered in what I knew I was born to do. One of my now software engineer friends used to joke about creating the")
+          +p("I am enthusiastic about all things Mechatronics. The sheer brilliance of how mechanical, electronics and software components cohesively mesh together in a harmonious synergy is absolutely fascinating to me. This fascination originated from when I was a child and has always meant that I was unwavered in what I knew I was born to do. One of my now software engineer friends used to joke about creating the")
           i Terminators
-          +p("and")
+          +p(" and ")
           i Skynet
-          +p("together, screaming that ")
+          +p(" together, screaming that ")
           i “we’ll be back”.
-          +p("Thankfully, we haven’t fallen to the dark side. My goal now is to create assistive Mechatronic technologies to improve the lives of many.")
+          +p(" Thankfully, we haven’t fallen to the dark side. My goal now is to create assistive Mechatronic technologies to improve the lives of many. ")
           br
           br
           +p("As far as I can remember, my personal motto has always been to leave things better than I found it. This has helped motivate most of my life choices up till now. My recent experiences have even further solidified this philosophy. After completing a 16-month internship as a photovoltaic designer and new product introduction (NPI) coordinator at Celestica, my approach to problem solving and continuous improvement has been revamped. I now understand the value of Kaizen and asking why. My observation of problems is now unequivocally from the top-down in order to effectively solve them. And so far, that need to continuously learn, and improve the tools and people around me has established opportunities and allowed for more efficient processes. ")
