--- a/src/pug/pages/portfolio.pug
+++ b/src/pug/pages/portfolio.pug
@@ -74,7 +74,7 @@ block content
               +tile({
                 title: "Battery Manager",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
-                content: "A tool designed to provide flexibility in the variety of research that I, and future research colleagues will undertake into the field of battery technology.",
+                content: "A tool designed to provide flexibility in the variety of research that I and future research colleagues will undertake into the field of battery technology.",
                 image: {
                   class: "",
                   src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
@@ -92,7 +92,7 @@ block content
               +tile({
                 title: "Search and Rescue Robot (SarBot)",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
-                content: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person in toe.",
+                content: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person or object in toe.",
                 image: {
                   class: "",
                   src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
