--- a/src/pug/pages/projects/boxer.pug
+++ b/src/pug/pages/projects/boxer.pug
@@ -3,7 +3,7 @@ extends /layout.pug
 block pageInfo
   -
     let page = {
-      
+
       url: "/projects/boxer",
       name: "boxer",
       title: "Boxer — An autonomous robotic platform",
@@ -33,24 +33,24 @@ block content
         class: "layout-padding-vert-small layout-clearfix"
       })
         +p
-          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left B
+          span.style-letter-head B
           span.layout-inline.layout-margin-dull
-            | oxer is an autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension. The project initially started as a platform to move material from one building to another, but has since been repurposed as a test platform for all research performed at
+            |  oxer is an autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension. The project initially started as a platform to move material from one building to another, but has since been repurposed as a test platform for all research performed at
             span=" "
             +link({
               href: "https://www.xianke-lin.com/",
-              content: "a lab at Ontario Tech University"
+              content: "Lin Lab in Ontario Tech"
             })(target="_blank" rel="noopener" title="A link to the lab where I conducted research on this project.")
             span .
             br
             br
-            | At only 46” x 30”, the platform can be both an indoor and outdoor vehicle. It boasts a sensor suite that will enable autonomy in the near future. These include, 4 cameras, one lidar, 8 ultrasonics and an inertial measurement unit (IMU).
+            | At only 1.2 m x 0.8 m (46” x 30”), the platform can be both an indoor and outdoor vehicle. It boasts a sensor suite that will enable autonomy in the near future. These include, 4 cameras, one lidar, 8 ultrasonics and an inertial measurement unit (IMU).
             br
             br
             i [+ Image of the sensor suite]
             br
             br
-            | With its 4 independent wheels, it can comfortably hold as much as an average human being (75kg).  Four independent wheels also allow for 3 different drive configurations, front wheel, rear wheel and all-wheel drive.
+            | With its 4 independent wheels, it can comfortably hold as much as an average human being (75 kg).  Four independent wheels also allow for 3 different drive configurations, front wheel, rear wheel and all-wheel drive.
             br
             br
             i [+ Image of its drive unit (wheels assembly)]
@@ -59,7 +59,7 @@ block content
             | Due to space restrictions, hub motors were used and in doing so, a Five-link suspension design was implemented on both the front and rear wheels to ensure proper handling.
             br
             br
-            | This work is still a work in progress, but I will periodically update it.
+            | This work is still a work in progress, but I will update it periodically.
 
   //- Next page layer
   +layout({
