--- a/src/pug/pages/projects/sarbot.pug
+++ b/src/pug/pages/projects/sarbot.pug
@@ -7,14 +7,14 @@ block pageInfo
       url: "/projects/sarbot",
       name: "sarbot",
       title: "SarBot — A Search and Rescue Robot",
-      description: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person in toe."
+      description: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person or object in toe."
     };
 
 block content
   //- Banner layer
   +banner({
     title: "Project 3: SarBot (2018)",
-    content: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person in toe",
+    content: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person or object in toe",
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
@@ -34,8 +34,8 @@ block content
       })
         div.layout-contain.layout-shorten-horz.layout-margin-vert
           +p
-            span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left T
-            span.layout-inline.layout-margin-dull he SarBot or Search and rescue robot was a major group project in the last year of my undergraduate studies. The project was meant to test our ability to design and develop a semi-autonomous robot to traverse a multi-leveled maze and return to the initial point with a miner. This project was meant to emulate an actual rescue mission in the scenario that miners are trapped on a sub-level in a mine. The reason why a robot is used here is due to the risk to human rescuers.
+            span.style-letter-head T
+            span.layout-inline.layout-margin-dull  he SarBot or Search and Rescue Robot was a major group project in the last year of my undergraduate studies. The project was meant to test our ability to design and develop a semi-autonomous robot to traverse a multi-leveled maze and return to the initial point with a miner. This project was meant to emulate an actual rescue mission in the scenario that miners are trapped on a sub-level in a mine. The reason why a robot is used here is due to the risk to human rescuers.
             br
             br
             figure.layout-margin-horz--device-gt-tablet.style-center
@@ -46,10 +46,7 @@ block content
               figcaption.layout-margin-top-small.style-font-14.style-italic Figure 1: An image of the floor Maze Sarbot had to cross
         div.layout-contain.layout-shorten-horz.layout-margin-vert
           +p
-            | Due to the smaller scale of the project, the team decided to design small for easy maneuverability. Our design consisted of a unibody chassis 3D printed in 2 parts. The top part housed 3 infrared (IR)sensors, the microcontroller (Teensy 3.6), a couple of voltage converter modules and the motor controller. On the bottom level, the wheels, batteries, geared DC motor, servo motors and one more IR sensor. The final assembly is shown below.
-            br
-            br
-            | Our approach, although not ideal for the use case, was similar to that of some self-driving vehicle companies. We first manually mapped out the maze with waypoints. These waypoints were placed near key landmarks. These landmarks include T-junctions, cross-sections, narrower paths, steep grades, terrain changes, miner location and so on. A matrix of data was then created for each waypoint to help the robot decide what actions to take at each waypoint. Each waypoint consisted of a base command to go forward, backward, left or right, a base command controller i.e. what controller to use to complete the base command, stopping conditions for the command, manipulator commands and others. For example, a waypoint next to a turn had data such a turn right command, how many degrees the turn is, the speed required to make the turn, and what controller to use to make the turn i.e. a PID controller for robot angle.
+            | Due to the smaller scale of the project, the team decided to design small for easy maneuverability. Our design consisted of a unibody chassis 3D printed in 2 parts. The top part housed 3 infrared (IR) sensors, the microcontroller (Teensy 3.6), a couple of voltage converter modules and the motor controller. On the bottom level, the wheels, batteries, geared DC motor, servo motors and one more IR sensor. The final assembly is shown below.
             br
             br
             figure.layout-margin-horz--device-gt-tablet.style-center
@@ -58,13 +55,15 @@ block content
                 alt: ""
               })(width="500px" height="500px")
               figcaption.layout-margin-top-small.style-font-14.style-italic Figure 2: A model of Sarbot.
-        div.layout-contain.layout-shorten-horz.layout-margin-vert
-          figure.layout-margin-horz--device-gt-tablet.style-center
-            +img-view({
-              src: "cloudinary/joseph-projects/sarbot/3D_Printing",
-              alt: ""
-            })(width="500px" height="500px")
-            figcaption.layout-margin-top-small.style-font-14.style-italic Figure 3: The 3D printing of the parts for Sarbot
+            br
+            figure.layout-margin-horz--device-gt-tablet.style-center
+              +img-view({
+                src: "cloudinary/joseph-projects/sarbot/3D_Printing",
+                alt: ""
+              })(width="500px" height="500px")
+              figcaption.layout-margin-top-small.style-font-14.style-italic Figure 3: The 3D printing of the parts for Sarbot
+            br
+            | Our approach, although not ideal for the use case, was similar to that of some self-driving vehicle companies. We first manually mapped out the maze with waypoints. These waypoints were placed near key landmarks. These landmarks include T-junctions, cross-sections, narrower paths, steep grades, terrain changes, miner location and so on. A matrix of data was then created for each waypoint to help the robot decide what actions to take at each waypoint. Each waypoint consisted of a base command to go forward, backward, left or right, a base command controller i.e. what controller to use to complete the base command, stopping conditions for the command, manipulator commands and others. For example, a waypoint next to a turn had data such a turn right command, how many degrees the turn is, the speed required to make the turn, and what controller to use to make the turn i.e. a PID controller for robot angle.
         div.layout-contain.layout-shorten-horz.layout-margin-vert
           +p
             | Our method to secure and return the miner, in our case, a toy was a quick and quirky solution called the Swatter. The innovative design made from the most reliable materials, a metal clothes hanger and some duct tape, yep, duct tape! I think the saying goes something like this, “if you can’t fix it with duct tape, you’re not using enough duct tape” haha. All jokes aside though, it seemed to work reliably, so we left it as is, not bothering with a complex robotic arm design.
@@ -91,7 +90,7 @@ block content
   //- Next page layer
 
   +layout({
-    class: "layout-contain-large layer-round layout-padding-horz--device-gt-tablet"
+    class: "layout-contain-large layer-round layout-padding-horz-small layout-padding-horz--device-gt-tablet"
   })
     +link({
       href: "/projects/ultima-apparel",
