--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -120,11 +120,12 @@
         overflow: hidden;
     }
 
-    &:not(.banner-mode) &-hero .layer-image {
-        &,
-        &:focus-visible {
-            border-radius: 15px;
-        }
+    &-hero .layer-image {
+        border-radius: 15px;
+    }
+
+    &.banner-mode &-hero .layer-image {
+        border-radius: 0px;
     }
 
     &.banner-mode .layer-image figcaption {
@@ -277,6 +278,7 @@
 
         .layer-image-overlay {
             background-color: transparent !important;
+            display: none;
         }
 
         &.layout-left {
@@ -302,6 +304,7 @@
 
         .layer-image-overlay {
             background-color: transparent !important;
+            display: none;
         }
 
         &.layout-left {
@@ -331,6 +334,7 @@
 
         .layer-image-overlay {
             background-color: transparent !important;
+            display: none;
         }
 
         &.layout-left {
@@ -351,6 +355,7 @@
             transform: scale(1) !important;
         }
     }
+
     &-secondary-btn {
         transition: background-color #{$transitionDuration} ease;
         @include applyTheme(background-color, "secondary-light");
@@ -396,7 +401,9 @@
 
         @for $sz from 1 through 20 {
             &-radius-#{$sz} {
-                &,
+                // IE doesn't support :focus-visible
+                border-radius: #{$sz}px;
+
                 &:focus-visible {
                     border-radius: #{$sz}px;
                 }
@@ -410,10 +417,11 @@
     }
 
     &-round {
-        &,
-        &:focus-visible {
-            border-radius: 20em;
-        }
+        border-radius: 9999px;
+    }
+
+    &-round:focus-visible {
+        border-radius: 9999px;
     }
 
     a .layer-tile {
@@ -421,7 +429,8 @@
 
         &-outline .layer-image-overlay {
             border: 4px solid transparent;
-            &,
+            border-radius: 8px;
+
             &:focus-visible {
                 border-radius: 8px;
             }
@@ -462,7 +471,7 @@
 
         &,
         .layer-image {
-            &,
+            border-radius: 8px;
             &:focus-visible {
                 border-radius: 8px;
             }
@@ -472,7 +481,8 @@
             &,
             & .layer-image,
             & .layer-image-overlay {
-                &,
+                border-radius: 0 !important;
+
                 &:focus-visible {
                     border-radius: 0 !important;
                 }
@@ -484,7 +494,7 @@
                 &,
                 & .layer-image,
                 & .layer-image-overlay {
-                    &,
+                    border-radius: 0 !important;
                     &:focus-visible {
                         border-radius: 0 !important;
                     }
@@ -532,9 +542,13 @@
         background-color: $white;
         background-color: var(--very-light, $white);
         overflow: hidden;
+        border-radius: 12px;
+        &:focus-visible {
+            border-radius: 12px;
+        }
 
         @media #{$screen-size-gt-tablet} {
-            &,
+            border-radius: 24px;
             &:focus-visible {
                 border-radius: 24px;
             }
@@ -625,7 +639,7 @@
             border: 2px solid;
             @include applyTheme(border-color, "mid-dark");
             position: relative;
-            &,
+            border-radius: 3px;
             &:focus-visible {
                 border-radius: 3px;
             }
