--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -23,7 +23,7 @@ mixin navbar(value = {})
             href: "/",
             class: "navbar-title style-primary-dark-hover style-primary-dark-focus"
           })(itemprop="url" data-swup-preload title="The Joseph Ojo Logo.")
-            img.navbar-logo(src="/favicon/favicon.svg" alt="Logo." itemprop="logo" inline)
+            img.navbar-logo(src="/favicon/favicon.svg" alt="Logo." itemprop="logo" width="20px" height="20px" loading="eager")
             //-  joseph-new.svg
             span.navbar-title-line
             span.name(itemprop="name") JOSEPH
