--- a/src/pug/pages/projects/phoenix.pug
+++ b/src/pug/pages/projects/phoenix.pug
@@ -41,7 +41,7 @@ block content
             +img-view({
               src: "cloudinary/joseph-projects/phoenix/01_cornerKey",
               alt: ""
-            })(width="500px" height="500px")
+            })(width="733px" height="596px")
             figcaption.layout-margin-top-small.style-font-14.style-italic Figure 1: An image of the frame design's blueprint
           br
           | While at Celestica, it was also my responsibility to run engineering, certification and mini-production builds in our prototyping factory. My responsibility was to convert designs to assembling instructions for a team of about 20 people to run. The order was typically to create the first version, try it out on my own or with a couple other more experienced engineers, find out issues with the process, fix the issues, release a new version of the assembly instructions and build it out fully with the team. Before the build, I hold a meeting with the team, secure materials and get support with reconfiguring the machines and laying out the factory lines. Here is an image of one of the new generation panels at the time.
@@ -49,10 +49,10 @@ block content
           br
           figure.layout-margin-horz--device-gt-tablet.style-center
             +img-view({
-              src: "cloudinary/joseph-projects/phoenix/01_cornerKey",
+              src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
               alt: ""
-            })(width="500px" height="500px")
-            figcaption.layout-margin-top-small.style-font-14.style-italic Figure 2: An image of the frame design's blueprint
+            })(width="839px" height="629px")
+            figcaption.layout-margin-top-small.style-font-14.style-italic Figure 2: An image of Joseph Ojo holding a phoenix frame based solarpanel
 
   //- Next page layer
   +layout({
