feat: :zap: defer theme js for faster theming

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -55,7 +55,7 @@ html(lang="en")
 
     block preload
 
-    script(src="/js/theme.min.js", async)
+    script(src="/js/theme.min.js", defer)
 
   body(itemscope="" itemtype="https://schema.org/WebPage")
     +link({
