--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -51,6 +51,6 @@ mixin navbar(value = {})
                     class: `navbar-link${url.toLowerCase().includes(tab) ? " navbar-link-focus" : ""}`
                   })(itemprop="url" data-swup-preload data-path=tab)
                     span.navbar-link-content(itemprop="name")= tab.replace("-", " ")
-                    meta(itemprop="position" content="1")
+                    //- meta(itemprop="position" content="1")
             .navbar-desktop-display
               +themeSwitcher
